  --comment) and frame selections.

* Fixed bad bug in merge: If a global colormap from the source needed to be
  dumped into a local colormap in the destination, the pixel map was wrong,
  resulting in bad colors in the destination.

* Fixed memory leaks. Changed memory usage pattern in gifsicle to
  release source image memory as soon as possible, resulting in a better
  memory profile. Memory fix in gifview, which now keeps images in
  compressed form.

* Fixed bugs in gifread.c that corrupted memory when uncompressing some bad
  images.

* Added debugging malloc library (`./configure --enable-dmalloc' to use it).

* Added `--no-delay' and `--no-disposal' options, which should have been there
  all along.

* Other performance improvements.


Version 1.2b6

* License clarification in README.

* GIF comments are now printed out more carefully in --info: binary characters
  appear as backslash escapes. (Literal backslashes are printed as `\\'.)

* New --extension-info/--xinfo option.

* Removed spurious warning about local colormaps when a --colors option is in
  effect.

* Replacing a named frame with another image now keeps the name by default.

* Many changes to gifview. Added --animate, --display, --geometry, --name,
  --help options, keystrokes, multiple GIFs on the command line, and a manual
  page.


Version 1.2b5	12.May.1998

* Longstanding bug fix in gifunopt.c: an interlaced replacement frame
  caused strange behavior when later optimizing, as the underlying data
  wasn't deinterlaced.

* Further improvements in optimizer; specifically, -O2 works better now --
  it uses actual image data to look for an unused pixel value when
  there's no transparency specified.


Version 1.2b4	12.May.1998

* Improved --optimize's performance on images where successive frames had
  different transparent color indexes.


Version 1.2b3	11.May.1998

* Fixed bugs in --unoptimize: it would try to unoptimize images with local